# interactive-resume

./: .gitignore  AGENTS.md  IMPLEMENTATION_PROMPT.md  README.md
backend/: pyproject.toml
backend/app/: __init__.py  config.py  cors.py  evaluate.py  generation.py  ingest.py  main.py  prompts.py  rate_limits.py  retrieval.py  sources.py
backend/tests/: conftest.py  test_api_contract.py  test_backend.py  test_evaluate.py  test_generation.py  test_prompts.py  test_retrieval.py  test_sources.py
docs/: agent-implementation-playbook.md  agent-skills.md  api-contract.md  architecture.md  backend-implementation.md  corpus-curation.md  dataset-quality.md  dataset-synthesis.md  deployment-recipes.md  eval-creation-cookbook.md  evaluation.md  fine-tuning-best-practices.md  fine-tuning-local-models.md  frontend-static-site.md  implementation-blueprint.md  job-fit-feature.md  minimal-resume-mode.md  model-candidate-evaluation.md  model-selection.md  personalization-intake.md  public-repo-hygiene.md  public-safety.md  role-prompt-routing.md  runtime-and-deployment.md  vendored-skills-policy.md
examples/evals/: smoke-questions.jsonl
examples/raw-corpus/: 001-sample-project.md
frontend/: package-lock.json  package.json
frontend/scripts/: build.mjs  dev.mjs  test.mjs
frontend/src/: index.html
frontend/test/: build.test.mjs  citation-parts.test.mjs  static-template.test.mjs
scripts/: verify-template.ps1  verify-template.sh
templates/backend/: .env.example  job-fit-request.schema.json  role-prompts.example.json
templates/corpus/: evidence-document.md
(+15 files in other folders)
